--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <!DOCTYPE html>
 <html lang="hu">
 
-<head>    
+<head> 
+    <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <title>Citrusfelek</title>    
